# render_web

./: Cargo.toml  frag.spirv  frag_static.spirv  vert.spirv
src/: frag.glsl  lib.rs  render_target.rs  renderer.rs  vert.glsl  vertex.rs  view_state.rs
www/: index.html  index.js  package-lock.json  package.json
