[package]
name = "render_web"
version = "0.1.0"
authors = ["eseaflower <eseaflower@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
futures = "0.3"
winit = {version="0.22", features=["web-sys"]}
image = "0.23"
bytemuck = "1.4"
log = "*"
simple_logger = "*"
cgmath = "*"
wgpu = {git="https://github.com/gfx-rs/wgpu-rs.git", branch="gecko"}
#wgpu_glyph = "0.9.0"
web-sys = {version="0.3", features=["Performance"]}# { version="= 0.3.39" }# Force this exact version of web-sys, since wgpu is incompatible with the latest version 0.3.45
console_log = "0.2"
console_error_panic_hook = "0.1.6"
wasm-bindgen = "0.2.67"
wasm-bindgen-futures = "0.4.17"
raw-window-handle = "0.3"